<resources>
    <string name="app_name">JorSay</string>

    <!-- Setup -->
    <string name="progress_init">Initializing</string>
    <string name="progress_gps">Checking Google Play Services</string>
    <string name="progress_tts">Checking Text to Speech</string>
    <string name="progress_tts_language">Checking Text to Speech for %s</string>
    <string name="progress_tts_error">Text to Speech not available</string>
    <string name="progress_notifications">Checking Notifications access</string>
    <string name="progress_init_jorsay_params">Initializing</string>

    <!-- Status messages -->
    <string name="status_not_reading_aloud">Not reading any notifications aloud</string>
    <string name="status_reading_aloud">Reading notifications aloud</string>

    <string name="status_apps">for %s apps</string>
    <string name="all">all</string>
    <string name="status_one_app">for 1 app</string>

    <string name="status_max_volume_on">at maximum volume</string>
    <string name="status_max_volume_off">at device volume</string>

    <string name="status_android_wear_on">after Shake Detection using Android Wear</string>
    <string name="status_android_wear_off">without Shake Detection</string>

    <string name="status_error_read_aloud">Select \'%s\' and configure other options</string>
    <string name="status_error_volume">Select \'%s\' or increase your Media volume</string>
    <string name="status_error_apps">Select some apps</string>

    <string name="status_snooze_time_left">Reading notifications is snoozed for %s</string>
    <plurals name="status_minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <string name="status_seconds">seconds</string>
    <string name="cancel_snooze">Cancel snooze</string>

    <string name="notification_access_dialog_title">Notification access</string>
    <string name="notification_access_dialog_text">JorSay needs access to notifications so that
        it can read them aloud.\n\nEnable it from device notification settings. Tap
        \'back\' once done.</string>
    <string name="notification_access_dialog_error_text">JorSay cannot find the settings for
        notification access, and cannot function without it. Please enable notification access for
        JorSay and then relaunch the app.</string>
    <string name="notification_access_dialog_ok">Device notification settings</string>
    <string name="notification_access_toast">Select JorSay to enable notification access</string>

    <!-- Preference screen -->
    <string name="pref_key_global_read_aloud" translatable="false">
        pref_key_global_read_aloud</string>
    <string name="pref_global_read_aloud">Read notifications aloud</string>

    <string name="pref_key_persistent_notification" translatable="false">
        pref_key_persistent_notification</string>
    <string name="pref_persistent_notification">Persistent notification</string>
    <string name="pref_persistent_notification_help">Improves reliability</string>

    <string name="pref_key_apps" translatable="false">pref_key_apps</string>
    <string name="pref_key_all_apps" translatable="false">pref_key_all_apps</string>
    <string name="pref_apps_title">Apps to read notifications for</string>
    <!-- We could have used plurals, but the strings Android gives depends on the language, and
    'zero' for english does not work. -->
    <string name="pref_apps_summary_one">Reading notifications for 1 app</string>
    <string name="pref_apps_summary">Reading notifications for %1$s apps</string>
    <string name="pref_apps_summary_none">No apps selected</string>
    <string name="select_apps_title">Select apps</string>
    <string name="all_apps">All apps</string>
    <string name="select_apps_error">Could not load list of apps. Please try again!</string>

    <string name="pref_key_max_volume" translatable="false">pref_key_max_volume</string>
    <string name="pref_max_volume">Use maximum volume</string>
    <string name="pref_max_volume_summary">Read notifications at maximum volume</string>

    <string name="pref_key_shake_detection" translatable="false">pref_key_shake_detection</string>
    <string name="pref_shake_detection_title">Configure Shake Detection</string>
    <string name="pref_key_android_wear" translatable="false">pref_key_android_wear</string>
    <string name="pref_android_wear">Shake Detection using Wear</string>
    <string name="pref_android_wear_summary_off">Will read notifications aloud immediately</string>
    <string name="pref_android_wear_summary_on">
        Trigger \'read aloud\' by shaking your wrist</string>
    <string name="pref_key_shake_intensity" translatable="false">pref_key_shake_intensity</string>

    <string name="pref_key_shake_duration" translatable="false">pref_key_shake_duration</string>
    <string name="shake_intensity">Shake intensity</string>
    <string name="shake_intensity_low">Low</string>
    <string name="shake_intensity_med">Medium</string>
    <string name="shake_intensity_high">High</string>

    <string name="shake_duration">Shake detection duration</string>
    <string name="shake_duration_value">%s seconds</string>

    <string name="text_volume_notification">Did not read %s notification</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_text_by">Crafted with ❤️ by the Mocha17 team</string>
    <string name="about_text_contact">Contact: mocha17apps@gmail.com</string>
    <string name="about_text_community">Community: https://goo.gl/nvUv4h</string>

    <!-- SnoozeReadAloud -->
    <string name="snooze_read_aloud_title">Snooze JorSay</string>
    <string name="snooze_read_aloud_text">Select a snooze duration</string>
    <plurals name="minute">
        <item quantity="one">min</item>
        <item quantity="other">mins</item>
    </plurals>
</resources>